Day3/17_ingress/solution/python.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /python
        backend:
          serviceName: python-service
          servicePort: 5002
